--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,3 +56,11 @@ button {
     color: white;
     font-weight: bold;
 }
+.empty{
+    color: rgb(146, 11, 11);
+    text-align: center;
+    font-size: 2em;
+    text-transform: uppercase;
+    font-style: italic;
+    font-weight: bolder;
+}
